--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,14 +2,15 @@
     <string name="app_name">Calculadora PDM 2020 2</string>
     <string name="clique_aqui">Clique aqui!</string>
     <string name="hello_world">Hello World!</string>
-    <string name="l1zero">0</string>
-    <string name="l1um">1</string>
-    <string name="l1dois">2</string>
-    <string name="l2zero">0</string>
-    <string name="l2um">1</string>
-    <string name="l2dois">2</string>
-    <string name="l3zero">0</string>
-    <string name="l3um">1</string>
-    <string name="l3dois">2</string>
+    <string name="zero">0</string>
+    <string name="one">1</string>
+    <string name="two">2</string>
+    <string name="three">3</string>
+    <string name="four">4</string>
+    <string name="five">5</string>
+    <string name="six">6</string>
+    <string name="seven">7</string>
+    <string name="eight">8</string>
+    <string name="nine">9</string>
     <string name="limpar">limpar</string>
 </resources>
